# MahCheungg

./: .env.example  .gitignore  API-DOCUMENTATION-20apr2025-06h35.md  ARCHITECTURE-20apr2025-06h35.md  ARCHITECTURE-MahCheungg-22apr2025-06h35.md  ARCHITECTURE.md  CHECKLIST-DevBuildWBS-06May2025-05h37.md  CHECKLIST-DevModularBuild-20250508-222141.md  CHECKLIST-JamiIntegration-22apr2025-06h35.md  CHECKLIST-MahCheungg-20apr2025.md  CHECKLIST-mahcheungg-devbuild-13may2025-10h30.md  CHECKLIST-mahcheungg-devbuild-20apr2025-11h55.md  CHECKLIST-mahcheungg-devbuild-20apr2025-12h30.md  IDEOLOGY-20apr2025-06h35.md  README.md  ROADMAP-20apr2025-06h35.md  ROADMAP-20apr2025-16h45.md  ROADMAP-MahCheungg-22apr2025-06h35.md  ROADMAP.md  SCHEMATIC-DIAGRAM-20apr2025-06h35.md  mahcheugg.html  server.js
.windsurf/workflows/: repo-assessment.md
MahCheungg-Deepsite-20apr2025/: mahcheungg-deepsite-20apr2025.html
docs/: ARCHITECTURE.md  PLAYER_INTERFACE.md  class TurnManager {  graph TD  sequenceDiagram
docs/architecture/: ARCHITECTURE-17Jun2025-20h47-after.md  ARCHITECTURE-20250618-end.md  ARCHITECTURE.md  CODEBASE-STRUCTURE-18jun2025-12h42.md  CODEBASE-STRUCTURE-20250702-140735-end.md  CODEBASE-STRUCTURE-20250702-140735-start.md  CODEBASE-STRUCTURE-20250702-end.md  codebase_overview.mermaid
mahcheungg-app/: .env.example  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.cjs  tailwind.config.js
mahcheungg-server/: README.md  package-lock.json  package.json  server.js
mcp-lemonsqueezy/: README.md  pyproject.toml
mcp-lemonsqueezy/src/: server.py
mcp-revenuecat/: .env.example  README.md  pyproject.toml
mcp-revenuecat/src/: __init__.py  server.py  tools.py
routes/: auth.js  stripe.js  weblnAuth.js
(+119 files in other folders)
