[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-lemonsqueezy"
version = "0.1.0"
authors = [
    {name = "Robin Cheung", email = "hello@RobinsAI.world"},
]
description = "LemonSqueezy MCP Server"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "pydantic>=1.10.7",
    "python-dotenv>=1.0.0",
    "requests>=2.28.2",
]

[project.urls]
"Homepage" = "https://github.com/rebots-online/mcp-lemonsqueezy"
"Bug Tracker" = "https://github.com/rebots-online/mcp-lemonsqueezy/issues"

[tool.setuptools]
packages = ["mcp_lemonsqueezy"]
